Fix margin for title on mobile devices

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -173,6 +173,6 @@ h1 {
     }
 
     h1 {
-        margin-top: 5em;
+        margin-top: 7em;
     }
 }
